--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "galary",
+  "name": "photixa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.4",
-    "framer-motion": "^5.6.0",
+    "framer-motion": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
